--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
-/*# sourceMappingURL=styles.css.map */
+*, *::before, *::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  outline: solid red;
+  width: 100%;
+  height: 100vh;
+}
+
+.gameBoardWrap {
+  transform-origin: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: grid;
+  grid-template-columns: 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  gap: 2%;
+}
+
+.gameBoardSquare {
+  width: 50px;
+  aspect-ratio: 1/1;
+  border: solid black 2px;
+}
+
+button {
+  outline: solid red;
+  position: fixed;
+}/*# sourceMappingURL=styles.css.map */
