--- a/styles.scss
+++ b/styles.scss
@@ -4,6 +4,45 @@
     margin: 0;
 
 }
-.1{
-    border-left: solid black;
+body{
+    outline:solid red;
+    width: 100%;
+    height: 100vh;
 }
+.gameBoardWrap{
+    transform-origin: center;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 50px 50px 50px;
+    grid-template-rows: 50px 50px 50px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    gap: 2%;
+}
+.gameBoardSquare{
+    width: 50px;
+    aspect-ratio: 1/1;
+    border: solid black 2px;
+}
+button{
+    outline: solid red;
+    position: fixed;
+}
+// .background{
+//     position: fixed;
+//     background-color: rgba(0, 0, 0, 0.5);
+//     top: 0;
+//     right: 0;
+//     left: 0;
+//     bottom: 0;
+// }
+// .welcomePage{
+//     width: 500px;
+//     height: 300px;
+
+//     position: fixed;
+//     top: 50%;
+//     left: 50%;
+// }
+
