--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   gap: 2%;
 }
 
@@ -28,9 +29,52 @@ body {
   width: 50px;
   aspect-ratio: 1/1;
   border: solid black 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
   outline: solid red;
   position: fixed;
+}
+
+.background {
+  transform: scale(0);
+}
+
+.background.active {
+  transform: scale(1);
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.welcomePage {
+  transform: scale(0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.welcomePage.active {
+  transform: scale(1);
+  background-color: white;
+  width: 500px;
+  height: 300px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.createPlayer {
+  transform: scale(0);
+}
+
+.createPlayer.active {
+  transform: scale(1);
 }/*# sourceMappingURL=styles.css.map */
