have a working prototype, need to figure out how to restart the game, the sign counters seem to get stuck to what they were the previous round and every time the game is restarted the player that won the previous round wins instantly

--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ body {
 }
 
 button {
-  outline: solid red;
-  position: fixed;
+  padding: 2%;
 }
 
 .background {
@@ -77,4 +76,18 @@ button {
 
 .createPlayer.active {
   transform: scale(1);
+}
+
+.winningDisplay {
+  background-color: white;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }/*# sourceMappingURL=styles.css.map */
