--- a/styles.scss
+++ b/styles.scss
@@ -22,12 +22,14 @@ body{
     gap: 2%;
 }
 .gameBoardSquare{
+    font-size: 2rem;
     width: 50px;
     aspect-ratio: 1/1;
     border: solid black 2px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius:5px;
 }
 button{
     padding: 2%;
@@ -68,6 +70,8 @@ button{
     transform: scale(1);
 }
 .winningDisplay{
+    transform: scale(0);
+    transition: 700ms;
     background-color: white;
     top: 0;
     right: 0;
@@ -79,4 +83,7 @@ button{
     align-items: center;
     flex-direction: column;
     gap: 10px;
+}
+.winningDisplay.active{
+    transform: scale(1);
 }
