--- a/styles.scss
+++ b/styles.scss
@@ -64,10 +64,52 @@ button{
     transform: translate(-50%, -50%);
 }
 .createPlayer{
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     transform: scale(0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .createPlayer.active{
     transform: scale(1);
+}
+.inputWrap{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 7%;
+    background-color: white;
+    border-radius: 20px;
+    border: 2px solid black;
+    input{
+        padding: 2%;
+        box-shadow: 3px 3px 5px -2px;
+        border: 0;
+        border-radius: 5px;
+        text-align: center;
+        border: 2px solid black;
+    }
+}
+button{
+    padding: 2%;
+    box-shadow: 3px 3px 5px -2px;
+    border: 0;
+    border-radius: 5px;
+    text-align: center;
+    border: 2px solid black;
+    background-color: white;
+    font-weight: 700;
+    &:hover{
+        cursor: pointer;
+    }
 }
 .winningDisplay{
     transform: scale(0);
