--- a/styles.scss
+++ b/styles.scss
@@ -10,16 +10,25 @@ body{
     height: 100vh;
 }
 .gameBoardWrap{
-    transform-origin: center;
-    height: fit-content;
     display: grid;
     grid-template-columns: 50px 50px 50px;
     grid-template-rows: 50px 50px 50px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     gap: 2%;
+    outline: solid green;
+}
+
+.gameBoardWrapWrap{
+    transform: scale(0);
+    width: 100vw;
+    position: fixed;
+    outline: solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.gameBoardWrapWrap.active{
+    transform: scale(1);
 }
 .gameBoardSquare{
     font-size: 2rem;
@@ -39,6 +48,7 @@ button{
     transform: scale(0);
 }
 .background.active{
+    z-index: 0;
     transform: scale(1);
     position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
@@ -127,5 +137,30 @@ button{
     gap: 10px;
 }
 .winningDisplay.active{
+    transform: scale(1);
+}
+.playerOrComputer{
+    background-color: white;
+    padding: 5%;
+    text-align: center;
+    border-radius: 20px;
+    border: solid black 2px;
+    h2{
+        margin-bottom: 5%;
+    }
+}
+.playerOrComputerWrap{
+    width: 100vw;
+    position: fixed;
+    z-index: 20;
+    transform: scale(0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: solid red;
+    height: 100vh;
+}
+.playerOrComputerWrap.active{
+    z-index: 20;
     transform: scale(1);
 }
