added sound effects for the game it is basically finished, the final step would be to make the computer smart

--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,6 @@ body {
   border-radius: 5px;
 }
 
-button {
-  padding: 2%;
-}
-
 .background {
   transform: scale(0);
 }
@@ -132,6 +128,11 @@ button {
 }
 button:hover {
   cursor: pointer;
+}
+
+button.active {
+  box-shadow: none;
+  transform: scale(0.99);
 }
 
 .winningDisplay {
